# MegRay

./: CMakeLists.txt
cmake/: Findrccl.cmake
include/megray/: config.h.in  megray.h
include/megray/core/: common.h  debug.h
include/megray/cuda/: cuda_context.h
include/megray/hip/: hip_context.h
include/megray/ucx/: communicator.h  utils.h
src/: CMakeLists.txt  megray.cpp
src/nccl/: communicator.cpp
src/rccl/: CMakeLists.txt  communicator.cpp
src/ucx/: all_gather.cpp  all_reduce.cpp  all_to_all.cpp  broadcast.cpp  communicator.cpp  gather.cpp  reduce.cpp  reduce_scatter.cpp  scatter.cpp
test/: CMakeLists.txt  test_cuda.cpp  test_hip.cpp
